--- a/index.html
+++ b/index.html
@@ -37,11 +37,20 @@
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" role="navigation" aria-label="Menu navigation">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
-            <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-decoration u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-hamburger-link u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" tabindex="-1" aria-label="Open menu" aria-controls="d468">
-              <svg class="u-svg-link" viewBox="0 0 24 24"><use xlink:href="#menu-hamburger"></use></svg>
-              <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
-</g></svg>
-            </a>
+            <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-decoration u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-hamburger-link u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+       href="https://leosight.cz/forum/topic/12631" aria-label="Go to topic">
+      <svg class="u-svg-link" viewBox="0 0 24 24">
+        <use xlink:href="#menu-hamburger"></use>
+      </svg>
+      <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px"
+           xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+        <g>
+          <rect y="1" width="16" height="2"></rect>
+          <rect y="7" width="16" height="2"></rect>
+          <rect y="13" width="16" height="2"></rect>
+        </g>
+      </svg>
+    </a>
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul role="menubar" class="u-nav u-spacing-2 u-unstyled u-nav-1"><li role="none" class="u-nav-item"><a role="menuitem" class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="./" style="padding: 10px 20px;">Domovská stránka</a>
@@ -231,7 +240,11 @@
                   <h2 class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-custom-font u-font-merriweather u-text u-text-2">Objednávka<br>Tequily Muerto 
                   </h2>
                   <p class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-text u-text-3">Tequila Muerto není jen další láhev na polici. Je to originál s příběhem, vůní agáve a chutí, která zraje ve dřevě jako dobrá vzpomínka. Vyplň formulář a my se postaráme o zbytek – poctivá tequila dorazí až k tobě domů, připravená psát další kapitolu. </p>
-                  <a href="#" class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-radius u-btn-1" title="https://docs.google.com/forms/d/1tFysYM2eo7q8VIpy3wAf1rxL4S6X7ViUQjPYZoI0RQI/edit">Objednávej nyní</a>
+                  <a href="https://docs.google.com/forms/d/1tFysYM2eo7q8VIpy3wAf1rxL4S6X7ViUQjPYZoI0RQI/edit"
+   class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-radius u-btn-1"
+   title="Otevřít objednávkový formulář">
+   Objednávej nyní
+</a>
                 </div>
               </div>
             </div>
