--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <h5 class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-text u-text-default u-text-1">Základní informace </h5>
                   <h2 class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-text u-text-default u-text-2">Přehled aktivit společnosti</h2>
                   <p class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-text u-text-default u-text-3">Dynamická společnost založená Francisem ElMuertosem roku 2022, která působí na území San Andreas. V rámci svých aktivit se věnuje logistice, pohostinství, výrobě a distribuci originální Tequilly Muerto, i úpravám vozidel. Dnes je tvořena sítí sesterských firem, které společně budují silnou a různorodou podnikatelskou základnu. </p>
-                  <a href="https://leosight.cz/forum/topic/12631" class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-radius u-btn-1">VÍCE<br>
+                  <a href="https://leosight.cz/forum/topic/12631" target="_blank" rel="noopener noreferrer" class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-radius u-btn-1">VÍCE<br>
                   </a>
                 </div>
               </div>
@@ -240,7 +240,7 @@
                   <h2 class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-custom-font u-font-merriweather u-text u-text-2">Objednávka<br>Tequily Muerto 
                   </h2>
                   <p class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-text u-text-3">Tequila Muerto není jen další láhev na polici. Je to originál s příběhem, vůní agáve a chutí, která zraje ve dřevě jako dobrá vzpomínka. Vyplň formulář a my se postaráme o zbytek – poctivá tequila dorazí až k tobě domů, připravená psát další kapitolu. </p>
-                  <a href="https://docs.google.com/forms/d/1tFysYM2eo7q8VIpy3wAf1rxL4S6X7ViUQjPYZoI0RQI/edit"
+                  <a href="https://docs.google.com/forms/d/1tFysYM2eo7q8VIpy3wAf1rxL4S6X7ViUQjPYZoI0RQI/edit" target="_blank" rel="noopener noreferrer"
    class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-radius u-btn-1"
    title="Otevřít objednávkový formulář">
    Objednávej nyní
